syntax = "proto3";

package grpc_simple;

option go_package = "github.com/luizmoitinho/grpc-golang-examples/grpc_simple/proto";

message GreetRequest{
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse);
}

